tests/resources/invalid/malformedCommentEnd.ebnf
(* I'm a normal (* comment!*) *)

(* I lost my ending * :(, causing an EOF before termination D: )

